text alignment in contact page has fixed

--- a/src/themes/theme2.css
+++ b/src/themes/theme2.css
@@ -94,6 +94,10 @@
 
   .contact_image_text {
     color: var(--text-color);
+    text-align: center;
+    box-shadow: 0px 2px 1px -1px rgba(255, 255, 255, 0.1),
+      0px 1px 1px 0px rgba(255, 255, 255, 0.08),
+      0px 1px 3px 0px rgba(255, 255, 255, 0.06);
   }
 
   .hamburger {
